# handwriting-synthesis

./: pyproject.toml
handwriting_synthesis/: __init__.py  hand.py  requirements.txt  rnn_cell.py  rnn_ops.py  synthesis.py  tf_utils.py
handwriting_synthesis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
handwriting_synthesis/handwriting_synthesis.egg-info/: SOURCES.txt  requires.txt
